Upgrade Java 8 to Java 17
Build & Dependency Changes:
- maven-compiler-plugin 3.1 -> 3.11.0, source/target 1.8 -> 17
- maven-war-plugin: add 3.4.0 to pluginManagement and modules
- maven-plugin-plugin 3.5 -> 3.10.2, add explicit descriptor goal
- Groovy 2.5.7 -> 3.0.21, Spring 5.1.4 -> 5.3.31
- Jetty 9.4.14 -> 9.4.53, HttpClient 4.5.6 -> 4.5.14
- BouncyCastle 1.60 -> 1.70, H2 1.4.197 -> 1.4.200
- shade-plugin 3.2.1 -> 3.5.1, gson 2.8.5 -> 2.10.1
- wiremock-standalone 2.23.2 -> 2.27.2
- Add JAXB runtime 2.3.9, jaxb-api 2.3.1, javax.activation 1.2.0

Java API Migration:
- Replace deprecated Class.newInstance() with
  getDeclaredConstructor().newInstance() across all modules
- Update exception signatures: consolidate
  InstantiationException|IllegalAccessException|ClassNotFoundException
  to ReflectiveOperationException
- Use CachedField.getCachedField() instead of CachedField.field
  (private in Groovy 3.0)

Groovity Script Fixes:
- Fix double-comma syntax in mixedAuthSocket.grvt (Groovy 3.0 strict)
- Use request.getCookies() instead of request.cookies in admin UI
- Use typed List<Attachment> in file.grvt for Groovy 3.0 generics

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>